--- a/static/index.html
+++ b/static/index.html
@@ -18,9 +18,9 @@
 	<div>
 		<!-- h1 through h6 are headers. The higher the number, the smaller the header -->
 		<!-- p means paragraph -->
-		
+
 		<div>
-			<h1>Scott Klemmer</h1>
+			<h1>Anthony Muzzillo</h1>
 			<p>human-computer interaction &middot; social computing &middot; crowdsourcing</p>
 		</div>
 
